@@ -20,6 +20,7 @@
   * Added callbacks to initMap()
   * Added disable() / enable() to M.SelectionListView
   * Added M.TableView (first, simple version)
+  * Refactored M.Request to use the callbacks property
 
 ** Version 0.7 - Date 18.10.2011 **
 
